Revision history for IPC::SRLock

0.14.3    2013-08-17 00:17:32
          - Updated toolchain
          - Switched to Dist::Zilla

0.13.3    2013-08-07 14:30:09
          - Reset min perl testing to original behaviour
          - Raised minimum Perl version to v5.10.1
          - POD updates

0.12.7    2013-08-03 10:53:41
          - Reverted min Perl ver testing in toolchain
          - Randomize shared memory key for parallel testing
          - New method for CPANTesting min Perl ver
          - Skip tests ANDK 7092717e-f880-11e2-8c3e-8ef8f1ff63fb
            Smoker deleted shared memory segment whilst we were using it
          - Aborting Bingoes failed see df276fba-f57c-11e2-8c80-50d7c5c10595
            No choice but to send this smoker to sleep 10 while 1.
            Chris Williams, put my pause id in your stop list
          - Bumped dependency on File::DataClass
          - Mooified

0.11.14   2013-06-25 14:13:17
          - Skip CPAN Testing for David Cantrell
            693dc200-c006-11e2-b7e8-40f1fec28264
          - Updated prereqs in Build.PL
          - Removed File::DataClass from tests
          - Added exception_class attr to ::Base
          - Exception class depends on Unexected
          - Added out attr to Exception class
          - Exception class allows us to apply roles
          - Loosed type constraint on umask
          - Loosed type constraint on patience
          - Bumped version on MooseX::Types::Common
          - Updated POD
          - Bumped patch number
          - Passes tests
          - Moosified

0.10.2    2013-05-05 12:11:12
          - Replace Data::Serializer with Storable
          - Updated inc::Bob to v1.13
          - Switched from SVN to Git

0.9.215   2013-04-20
          - Fixed POD encoding
          - Readded _normalize_prereqs to inc::SubClass

0.9.212   2013-04-16
          - Switched to is from ok in tests. Added more tests

0.9.210   2013-04-15